[EagerAppCDS] fix api used in testcases
Summary:

Test Plan: ci jtreg cds+quickstart

Reviewed-by: lingjun-cg, yuleil